--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,5 +1,240 @@
-<html>
-  <body>
-    woo hoo !!
-  </body>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 60px;
+                padding-bottom: 40px;
+            }
+        </style>
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+        <![endif]-->
+
+        <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
+
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="#">Project name</a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li class="nav-header">Nav header</li>
+                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">One more separated link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="navbar-form pull-right">
+                            <input class="span2" type="text" placeholder="Email">
+                            <input class="span2" type="password" placeholder="Password">
+                            <button type="submit" class="btn">Sign in</button>
+                        </form>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+
+   
+			<div class="hero-unit">
+                <h4>Choose your wine</h4>
+                <h5>Choose color</h5>
+				<ul class="color-choice ul-horizontal unstyled">
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineColor" id="wineColor1" value="Red" checked>
+						    Red 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineColor" id="wineColor2" value="Rose" checked>
+						    Rose 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineColor" id="wineColor3" value="Whote" checked>
+						    White 
+						</label>
+					</li>
+				</ul>
+				<h5>How do you like your wine?</h5>
+				<ul class="body-choice ul-horizontal unstyled">
+				<!--for Red Wine -->
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineBody" id="wineBody1" value="A" checked>
+						    Light 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineBody" id="wineBody2" value="B" checked>
+						    Medium Light 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineBody" id="wineBody3" value="C" checked>
+						    Medium Bodied 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineBody" id="wineBody4" value="D" checked>
+						    Medium Full 
+						</label>
+					</li>
+					<li>
+						<label class="radio">
+							<input type="radio" name="wineBody" id="wineBody5" value="E" checked>
+						    Full Bodied 
+						</label>
+					</li>
+				
+				</ul>	
+                <p class="clearfix"><a class="btn btn-primary btn-large pull-right">See wine suggestions &raquo;</a></p>
+            </div>
+			
+			<div class="results">
+			    <p class="text-info">If you have already tasted the wines from the list below, kindly rate the wine so that we can show you the recommendations...</p>
+				<ul class="ul-horizontal unstyled">
+					<li class="row-fluid">
+						 <div class="span1">
+                                                       <%= image_tag("red-wine.jpg") %>
+						 </div>
+						<div class="span11">
+							<h4>Trey Marie Trutina</h4>
+							<p class="winebody-info"> This is a <em>Medium body</em> wine</p>
+							<dl class="attributes">				
+								<dt>Country:</dt>
+								<dd>USA</dd>
+								<dt>Region:</dt>
+								<dd>Washington</dd>
+								<dt>Vintage:</dt>
+								<dd>1999</dd>
+								<dt>Varietal:</dt>
+								<dd>Red Bordeaux Blend</dd>
+								<dt>Price:</dt>
+								<dd>&pound;21.25</dd>
+							</dl>
+							
+							<div class="rating">
+								<span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span>
+							</div>
+						</div>
+					</li>
+					<li class="row-fluid">
+						 <div class="span1">
+                                                      <%= image_tag("red-wine.jpg") %>
+						 </div>
+						<div class="span11">
+							<h4>Trey Marie Trutina</h4>
+							<p class="winebody-info"> This is a <em>Medium body</em> wine</p>
+							<dl class="attributes">				
+								<dt>Country:</dt>
+								<dd>USA</dd>
+								<dt>Region:</dt>
+								<dd>Washington</dd>
+								<dt>Vintage:</dt>
+								<dd>1999</dd>
+								<dt>Varietal:</dt>
+								<dd>Red Bordeaux Blend</dd>
+								<dt>Price:</dt>
+								<dd>&pound;21.25</dd>
+							</dl>
+							
+							<div class="rating">
+								<span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span>
+							</div>
+						</div>
+					</li>
+					<li class="row-fluid">
+						 <div class="span1">
+                                                      <%= image_tag("red-wine.jpg") %>
+						 </div>
+						<div class="span11">
+							<h4>Trey Marie Trutina</h4>
+							<p class="winebody-info"> This is a <em>Medium body</em> wine</p>
+							<dl class="attributes">				
+								<dt>Country:</dt>
+								<dd>USA</dd>
+								<dt>Region:</dt>
+								<dd>Washington</dd>
+								<dt>Vintage:</dt>
+								<dd>1999</dd>
+								<dt>Varietal:</dt>
+								<dd>Red Bordeaux Blend</dd>
+								<dt>Price:</dt>
+								<dd>&pound;21.25</dd>
+							</dl>
+							
+							<div class="rating">
+								<span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span><span>&#9734;</span>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			
+			<div class="clearfix"><a class="btn btn-primary btn-large pull-right" href="rec.html">Show Recommendations</a></div>
+			
+			
+            <hr>
+			
+            <footer>
+                <p>&copy; Company 2012</p>
+            </footer>
+
+        </div> <!-- /container -->
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
+
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+        <script>
+            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
+    </body>
 </html>
